# evrys

./: .bazelrc  .gitignore  .goreleaser.yaml  BUILD.bazel  Dockerfile  LICENSE.md  README.md  WORKSPACE  evrys.proto  go.mod  go.sum  go_dependencies.bzl  main.go
.github/workflows/: main.yml
cmd/: cmd.go  cmd_test.go  evrys.go  grpc.go  publish.go  publish_events.go  publish_events_test.go  root.go  serve.go  serve_dashboard.go  serve_dashboard_test.go  serve_grpc.go
cmd/testdata/: config.yaml  events.json
encoding/: decode.go
eventstore/: errors.go  mongo.go  mongo_test.go  store.go
examples/aws/: .terraform.lock.hcl  README.md  main.tf  variables.tf
examples/aws/modules/dynamo/: main.tf  outputs.tf  variables.tf
examples/aws/modules/iam/: main.tf  outputs.tf  variables.tf
examples/aws/modules/sns2sqs/: main.tf  outputs.tf  variables.tf
grpc/: grpc.go  service.go  service_test.go  testing.go
helm/: Chart.yaml  values.yaml
helm/templates/: deployment.yaml  pod.yaml  service.yaml
integrations/: cassandra.go  cassandra_test.go  integrations.go
lib/encoding/: BUILD.bazel
lib/eventstore/: BUILD.bazel  errors.go  store.go
notification/: bus.go  bus_test.go  kafka.go  kafka_test.go
proto/: evrys.pb.go  evrys_grpc.pb.go
svc-event-log/: BUILD.bazel  main.go
svc-event-log/cmd/: BUILD.bazel  cmd.go  eventlog.go  serve.go  serve_grpc.go
svc-event-log/eventlogpb/: BUILD.bazel  eventlogpb.pb.go  eventlogpb.proto  eventlogpb_grpc.pb.go
svc-event-log/grpc/: BUILD.bazel  service.go  service_test.go
testcontainer/: kafka.go  kafka_test.go  testcontainer.go
