load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "eventlogpb_proto",
    srcs = ["eventlogpb.proto"],
    visibility = ["//visibility:public"],
    deps = [
        "//github.com/cloudevents/sdk-go/binding/format/protobuf/v2/pb:pb_proto",
        "@com_google_protobuf//:empty_proto",
    ],
)

go_proto_library(
    name = "eventlogpb_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/z5labs/evrys/svc-event-log/eventlogpb",
    proto = ":eventlogpb_proto",
    visibility = ["//visibility:public"],
    deps = ["//github.com/cloudevents/sdk-go/binding/format/protobuf/v2/pb:cloudevent_proto"],
)

go_library(
    name = "eventlogpb",
    embed = [":eventlogpb_go_proto"],
    importpath = "github.com/z5labs/evrys/svc-event-log/eventlogpb",
    visibility = ["//visibility:public"],
)
