load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "grpc",
    srcs = ["service.go"],
    importpath = "github.com/z5labs/evrys/svc-event-log/grpc",
    visibility = ["//visibility:public"],
    deps = [
        "//svc-event-log/eventlogpb",
        "@org_golang_google_protobuf//types/known/emptypb",
    ],
)
