load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "grpc",
    srcs = ["service.go"],
    importpath = "github.com/z5labs/evrys/svc-event-log/grpc",
    visibility = ["//visibility:public"],
    deps = [
        "//lib/eventstore",
        "//svc-event-log/eventlogpb",
        "@com_github_cloudevents_sdk_go_binding_format_protobuf_v2//:protobuf",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//status",
        "@org_golang_google_protobuf//types/known/emptypb",
        "@org_golang_x_sync//errgroup",
        "@org_uber_go_zap//:zap",
    ],
)

go_test(
    name = "grpc_test",
    srcs = ["service_test.go"],
    embed = [":grpc"],
    deps = [
        "//svc-event-log/eventlogpb",
        "@com_github_cloudevents_sdk_go_binding_format_protobuf_v2//pb",
        "@com_github_cloudevents_sdk_go_v2//event",
        "@com_github_stretchr_testify//assert",
        "@org_golang_google_grpc//:go_default_library",
        "@org_golang_google_grpc//codes",
        "@org_golang_google_grpc//credentials/insecure",
        "@org_golang_google_grpc//status",
        "@org_uber_go_zap//:zap",
    ],
)
